--- a/src/main/java/gui/client/jFrameLogin.form
+++ b/src/main/java/gui/client/jFrameLogin.form
@@ -95,6 +95,9 @@
     <Component class="javax.swing.JPasswordField" name="jPasswordField">
     </Component>
     <Component class="javax.swing.JTextField" name="jTextFieldUsername">
+      <Properties>
+        <Property name="toolTipText" type="java.lang.String" value="Your Username"/>
+      </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
